--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,99 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "RaviLms": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/ravi-lms",
+      "sourceRoot": "projects/ravi-lms/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/ravi-lms",
+            "index": "projects/ravi-lms/src/index.html",
+            "browser": "projects/ravi-lms/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "projects/ravi-lms/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/ravi-lms/public"
+              }
+            ],
+            "styles": [
+              "projects/ravi-lms/src/styles.css"
+            ],
+            "scripts": [],
+            "server": "projects/ravi-lms/src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "projects/ravi-lms/src/server.ts"
+            }
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "RaviLms:build:production"
+            },
+            "development": {
+              "buildTarget": "RaviLms:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "projects/ravi-lms/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/ravi-lms/public"
+              }
+            ],
+            "styles": [
+              "projects/ravi-lms/src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
   }
 }
